--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 <span class="number">+5</span>
                 <span class="label">Programas de Desenvolvimento</span>
             </div>
-            <div class="number-card4">
+            <!-- <div class="number-card4">
                 <span class="number">100%</span>
                 <span class="label">Gratuito para a Comunidade</span>
-            </div>
+            </div> -->
         </div>
     </section>
 
