add contatos do instituto

--- a/index.html
+++ b/index.html
@@ -297,6 +297,18 @@
    <footer>
     <div class="container">
         <div class="footer-info">
+
+        <div class="contact">
+            <h4>Endereço</h4>
+            <p>R. Xavier Chaves, 100 - Paupina, Fortaleza - CE, 60873-630</p>
+        </div>
+
+        <div class="contact-info">
+            <h4>Contato</h4>
+            <p>Telefone: (00) 90000-0000</p>
+            <p>Email: contato@institutobomvizinho.com.br</p>
+        </div>
+
         <div class="social">
             <h4>Redes Sociais</h4>
             <ul>
@@ -304,10 +316,8 @@
                 <li><a href="https://www.facebook.com/obomvizinho/?locale=pt_BR" target="_blank"><img src="img/facebook-ibv.png" alt="Facebook" loading="lazy"></a></li>
             </ul>
         </div>
-            <div class="contact">
-                <h4>Endereço</h4>
-                <p>R. Xavier Chaves, 100 - Paupina, Fortaleza - CE, 60873-630</p>
-            </div>
+         
+            
         </div>
         <div class="footer-bottom">
             <p>© 2025 Instituto Bom Vizinho - Uma iniciativa social do <img src="img/pinheiro2.png" alt="Supermercado Pinheiro"></p>
