--- a/index.html
+++ b/index.html
@@ -196,32 +196,38 @@
             <h2 class="animate-on-scroll fade-in">Nossos Programas</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <img src="img/musica.png" alt="Aula de Música" loading="lazy">
+                    <img src="imagens_ibv/coral/coral_apresentacao_campal2.jpg" alt="Aula de Música" loading="lazy">
                     <h3>Aula de Música</h3>
                     <p>Desenvolvemos talentos e a sensibilidade através de aulas de canto coral e instrumentos musicais.</p>
                     <a href="#" class="learn-more" data-program="musica">Saiba Mais</a>
                 </div>
                 <div class="program-card">
-                    <img src="img/ingles.png" alt="Aulas de Inglês" loading="lazy">
+                    <img src="imagens_ibv/ingles/aula_ingles1.png" alt="Aulas de Inglês" loading="lazy">
                     <h3>Aulas de Inglês</h3>
                     <p>Amplie seus horizontes e oportunidades com nosso curso de inglês para crianças e adolescentes.</p>
                     <a href="#" class="learn-more" data-program="ingles">Saiba Mais</a>
                 </div>
                 <div class="program-card">
-                    <img src="img/reforco.png" alt="Reforço Escolar" loading="lazy">
+                    <img src="imagens_ibv/reforco/aula_reforco1.png" alt="Reforço Escolar" loading="lazy">
                     <h3>Reforço Escolar</h3>
                     <p>Apoio pedagógico para melhorar o desempenho escolar e garantir um futuro brilhante.</p>
                     <a href="#" class="learn-more" data-program="reforco">Saiba Mais</a>
                 </div>
                 <div class="program-card">
-                    <img src="img/informatica.png" alt="Informática" loading="lazy">
+                    <img src="imagens_ibv/informatica/filme_informatica.JPG" alt="Informática" loading="lazy">
                     <h3>Informática</h3>
                     <p>Inclusão digital e desenvolvimento de habilidades tecnológicas essenciais para o século XXI.</p>
                     <a href="#" class="learn-more" data-program="informatica">Saiba Mais</a>
                 </div>
                 <div class="program-card">
-                    <img src="img/horta.png" alt="Horta Comunitária" loading="lazy">
+                    <img src="imagens_ibv/horta/horta1.jpg" alt="Horta Comunitária" loading="lazy">
                     <h3>Horta Comunitária</h3>
+                    <p>Aprendizado sobre cultivo, alimentação saudável e sustentabilidade em nossa própria horta.</p>
+                    <a href="#" class="learn-more" data-program="horta">Saiba Mais</a>
+                </div>
+                <div class="program-card">
+                    <img src="imagens_ibv/atividades_maes/pintura_maes.png" alt="Horta Comunitária" loading="lazy">
+                    <h3>Artesanato</h3>
                     <p>Aprendizado sobre cultivo, alimentação saudável e sustentabilidade em nossa própria horta.</p>
                     <a href="#" class="learn-more" data-program="horta">Saiba Mais</a>
                 </div>
