--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <h2 class="animate-on-scroll fade-in">Nossos Programas</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <img src="imagens_ibv/coral/coral_apresentacao_campal2.jpg" alt="Aula de Música" loading="lazy">
+                    <img src="imagens_ibv/coral/coral_apresentacao_videira2.png" alt="Aula de Música" loading="lazy">
                     <h3>Aula de Música</h3>
                     <p>Desenvolvemos talentos e a sensibilidade através de aulas de canto coral e instrumentos musicais.</p>
                     <a href="#" class="learn-more" data-program="musica">Saiba Mais</a>
@@ -214,7 +214,7 @@
                     <a href="#" class="learn-more" data-program="reforco">Saiba Mais</a>
                 </div>
                 <div class="program-card">
-                    <img src="imagens_ibv/informatica/filme_informatica.JPG" alt="Informática" loading="lazy">
+                    <img src="imagens_ibv/informatica/aula_informatica2.jpg" alt="Informática" loading="lazy">
                     <h3>Informática</h3>
                     <p>Inclusão digital e desenvolvimento de habilidades tecnológicas essenciais para o século XXI.</p>
                     <a href="#" class="learn-more" data-program="informatica">Saiba Mais</a>
