alterações nos cards de momentos

--- a/index.html
+++ b/index.html
@@ -147,31 +147,11 @@
                         </div>
                     </div>
 
-                    <div class="moment-slide" data-category="natal" data-date="2022-12-18">
-                        <div class="moment-card">
-                            <div class="moment-image">
-                                <img src="img/evento-natal-2022.jpg" alt="Natal 2022" loading="lazy">
-                            </div>
-                            <div class="moment-content">
-                                <div class="moment-meta">
-                                    <span class="moment-category">🎄 Natal</span>
-                                    <span class="moment-date">18 de Dezembro de 2022</span>
-                                </div>
-                                <h3 class="moment-title">Natal 2022</h3>
-                                <p class="moment-description">Festa de natal com teatro infantil, apresentação musical e entrega de kits natalinos para todas as crianças atendidas pelo instituto.</p>
-                                <div class="moment-info">
-                                    <span class="moment-participants">👥 100 participantes</span>
-                                    <span class="moment-type">🎄 Celebração</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                     <!-- Festas Tradicionais -->
                     <div class="moment-slide" data-category="festas" data-date="2024-07-16">
                         <div class="moment-card">
                             <div class="moment-image">
-                                <img src="img/evento-festa-junina-2024.jpg" alt="Festa Junina 2024" loading="lazy">
+                                <img src="img/carrossel14.jpg" alt="Festa Junina 2024" loading="lazy">
                             </div>
                             <div class="moment-content">
                                 <div class="moment-meta">
@@ -192,7 +172,7 @@
                     <div class="moment-slide" data-category="cultura" data-date="2024-09-15">
                         <div class="moment-card">
                             <div class="moment-image">
-                                <img src="img/evento-coral-apresentacao.jpg" alt="Apresentação do Coral" loading="lazy">
+                                <img src="imagens_ibv/coral/coral.png" alt="Apresentação do Coral" loading="lazy">
                             </div>
                             <div class="moment-content">
                                 <div class="moment-meta">
@@ -213,7 +193,7 @@
                     <div class="moment-slide" data-category="conquistas" data-date="2024-04-05">
                         <div class="moment-card">
                             <div class="moment-image">
-                                <img src="img/evento-inauguracao.jpg" alt="Inauguração da Loja Pinheiro" loading="lazy">
+                                <img src="img/carrossel2.jpg" alt="Inauguração da Loja Pinheiro" loading="lazy">
                             </div>
                             <div class="moment-content">
                                 <div class="moment-meta">
@@ -234,7 +214,7 @@
                     <div class="moment-slide" data-category="parcerias" data-date="2024-06-18">
                         <div class="moment-card">
                             <div class="moment-image">
-                                <img src="img/evento-parceria-geek.jpg" alt="Parceria Geek Ação" loading="lazy">
+                                <img src="img/carrossel3.jpg" alt="Parceria Geek Ação" loading="lazy">
                             </div>
                             <div class="moment-content">
                                 <div class="moment-meta">
