ajustes de imagens

--- a/index.html
+++ b/index.html
@@ -232,46 +232,10 @@
                     </div>
 
                     <!-- Educação -->
-                    <div class="moment-slide" data-category="educacao" data-date="2024-03-10">
-                        <div class="moment-card">
-                            <div class="moment-image">
-                                <img src="img/evento-workshop-tecnologia.jpg" alt="Workshop de Tecnologia" loading="lazy">
-                            </div>
-                            <div class="moment-content">
-                                <div class="moment-meta">
-                                    <span class="moment-category">🎓 Educação</span>
-                                    <span class="moment-date">10 de Março de 2024</span>
-                                </div>
-                                <h3 class="moment-title">Workshop de Tecnologia</h3>
-                                <p class="moment-description">Workshop introdutório sobre programação e tecnologia, despertando o interesse dos jovens para carreiras do futuro.</p>
-                                <div class="moment-info">
-                                    <span class="moment-participants">👥 25 alunos</span>
-                                    <span class="moment-type">💡 Workshop</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  
 
                     <!-- Comunitário -->
-                    <div class="moment-slide" data-category="comunitario" data-date="2024-05-01">
-                        <div class="moment-card">
-                            <div class="moment-image">
-                                <img src="img/evento-acao-comunitaria.jpg" alt="Ação Comunitária" loading="lazy">
-                            </div>
-                            <div class="moment-content">
-                                <div class="moment-meta">
-                                    <span class="moment-category">🌱 Comunitário</span>
-                                    <span class="moment-date">01 de Maio de 2024</span>
-                                </div>
-                                <h3 class="moment-title">Ação Comunitária</h3>
-                                <p class="moment-description">Dia de serviço comunitário com limpeza e revitalização de áreas públicas da Paupina, envolvendo toda a comunidade.</p>
-                                <div class="moment-info">
-                                    <span class="moment-participants">👥 50 voluntários</span>
-                                    <span class="moment-type">🤝 Ação Social</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </div>
@@ -303,7 +267,7 @@
         </div>
     </section>
 
-    <section id="sobre" class="about" data-bg-src="img/fundo-instituto.jpg">
+    <section id="sobre" class="about" data-bg-src="imagens_ibv/IMG_3685.jpg">
         <div class="container">
             <div class="about-text animate-on-scroll slide-in-left">
                 <h2>Nossa Missão</h2>
