modificação nos titulos de cada seção

--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
             </div>
         </div>
     </section>
-
+<h2 class="section-title fade-in">Nossos Programas</h2>
     <section id="programas" class="programs">
         <div class="container">
-            <h2 class="animate-on-scroll fade-in">Nossos Programas</h2>
+            
             <div class="program-grid">
                 <div class="program-card">
                     <img data-src="imagens_ibv/coral/coral_apresentacao_videira2.png" alt="Aula de Música" class="lazy">
@@ -330,9 +330,10 @@
         </div>
     </section>
 
+    <h2 class="section-title animate-on-scroll fade-in">Histórias que Inspiram</h2>
     <section id="historias" class="stories" data-bg-src="imagens_ibv/coral/coral_apresentacao_campal3.jpg">
     <div class="container">
-        <h3 class="animate-on-scroll fade-in">Histórias que Inspiram</h3>
+        <h3 class="animate-on-scroll fade-in"></h3>
         <div class="story-carousel-container animate-on-scroll fade-in"> 
             <button class="carousel-button prev" aria-label="História Anterior">&#10094;</button>
             <div class="story-slider-wrapper">
