alinhando design seções

--- a/index.html
+++ b/index.html
@@ -283,11 +283,11 @@
                 </iframe>
             </div>
         </div>
-    </section>
-<h2 class="section-title fade-in">Nossos Programas</h2>
+    </section> 
+    <h2 class="section-title">Nossos Programas</h2>
     <section id="programas" class="programs">
         <div class="container">
-            
+           
             <div class="program-grid">
                 <div class="program-card">
                     <img data-src="imagens_ibv/coral/coral_apresentacao_videira2.png" alt="Aula de Música" class="lazy">
