teste de responsividade do carrossel

--- a/index.html
+++ b/index.html
@@ -244,6 +244,16 @@
 
         <!-- Indicadores do Carrossel -->
         <div class="carousel-indicators"></div>
+        
+        <!-- Botões de Navegação -->
+        <div class="carousel-nav">
+            <button class="carousel-prev" aria-label="Slide anterior">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="carousel-next" aria-label="Próximo slide">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </div>
     </div>
 </section>
 </section>
