--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>© 2025 Instituto Bom Vizinho <span>• Uma iniciativa social do <img src="img/pinheiro2.png" alt="Supermercado Pinheiro" style="height: 20px; margin-left: 3px; vertical-align: middle;"></span></p>
+            <p>© 2025 Instituto Bom Vizinho - Uma iniciativa social do <img src="img/pinheiro2.png" alt="Supermercado Pinheiro" style="height: 24px; margin-left: 5px; vertical-align: middle;"></p>
         </div>
     </footer>
 
