add imagens aos backgrounds

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     </section>
 
     <h2 class="section-title animate-on-scroll fade-in">Histórias que Inspiram</h2>
-    <section id="historias" class="stories" data-bg-src="imagens_ibv/coral/coral_apresentacao_campal3.jpg">
+    <section id="historias" class="stories" data-bg-src="imagens_ibv/atividades_maes/colinaria_maes_1.png" style="background-position: center 60%; background-size: cover; background-repeat: no-repeat; min-height: 400px;">
     <div class="container">
         <h3 class="animate-on-scroll fade-in"></h3>
         <div class="story-carousel-container animate-on-scroll fade-in"> 
